--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.1.2.RELEASE</version>
+        <relativePath />
     </parent>
     <groupId>com.goodrain</groupId>
     <artifactId>java-maven-demo</artifactId>
